fixed left scrollbar, login & logout

--- a/src/app/notfound/notfound.component.css
+++ b/src/app/notfound/notfound.component.css
@@ -160,27 +160,3 @@ img{
     color: #ffffff;
     margin: 20px 0;
 }
-
-/* ------------------
-    Animationload
---------------------*/
-.animationload {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ffffff;
-    z-index: 999999;
-}
-.loader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -100px 0 0 -100px;
-    width: 200px;
-    height: 200px;
-    background-image: url("/assets/404/assets/img/ajax-loader.gif");
-    background-position: center;
-    background-repeat: no-repeat;
-}
